fix(side-navigation): update sidebar labels visibility and center icon in collapse state (#1452)
* fix(side-navigation): adjust icon overlap when scrollbar is displayed

* fix(side-navigation): hide lables when sidebar is at default min-width

* refactor: add class by host

* refactor: add readonly to variable

--- a/projects/ng-aquila/src/sidebar/sidebar.scss
+++ b/projects/ng-aquila/src/sidebar/sidebar.scss
@@ -38,6 +38,28 @@ $sidebar-width: 280px;
             flex-shrink: 1;
         }
     }
+
+    &.hide-label {
+        ::ng-deep .nx-action__wrapper {
+            justify-content: center;
+
+            &::before {
+                display: none;
+            }
+
+            .nx-action-icon__container {
+                padding-right: 0;
+            }
+
+            .nx-action__label {
+                display: none;
+            }
+        }
+
+        ::ng-deep .nx-action {
+            padding: nx-spacer(2xs) 0;
+        }
+    }
 }
 
 ::ng-deep .nx-sidebar__footer {
